# csscade

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
csscade/: __init__.py  merger.py  models.py  performance.py  property_merger.py  property_merger_enhanced.py  property_merger_full_expand.py  property_merger_hybrid.py  property_merger_old.py
csscade/combinator/: __init__.py  combinator.py  conflict_detector.py  css_analyzer.py  property_groups.py
csscade/config/: __init__.py  config_manager.py
csscade/debug/: __init__.py  debugger.py
csscade/generator/: naming.py  output.py
csscade/handlers/: __init__.py  error_recovery.py  fallback.py  large_file_handler.py  media.py  selector_parser.py  selector_utils.py  shorthand.py  shorthand_hybrid.py  unicode_handler.py  variables.py
csscade/integration/: __init__.py  helpers.py
csscade/optimization/: __init__.py  batch_processor.py  deduplicator.py
csscade/parser/: css_parser.py  value_parser.py
csscade/resolvers/: conflict_detector.py  conflict_resolver.py
csscade/strategies/: base.py  component.py  permanent.py  replace.py
csscade/utils/: __init__.py  exceptions.py  important_parser.py  rule_matcher.py
csscade/validation/: __init__.py  browser_compat.py  security.py  syntax_validator.py
