[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csscade"
version = "0.3.0"
description = "Intelligent CSS merging with conflict resolution and multiple strategies"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "sebieire"},
]
maintainers = [
    {name = "sebieire"},
]
keywords = ["css", "merge", "conflict-resolution", "styling", "theme", "customization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "cssutils>=2.11.1",
]

[project.urls]
Homepage = "https://github.com/sebieire/csscade"
Repository = "https://github.com/sebieire/csscade"
Issues = "https://github.com/sebieire/csscade/issues"
Documentation = "https://github.com/sebieire/csscade#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=25.0.0",
    "mypy>=1.17.0",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["csscade*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"